# agpk-schedule

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  Schedule_2025-2026.csv  Schedule_2025-2026.xlsx  alembic.ini  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  requirements.txt  test_schedule.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 449bca05824d_test.py  9b2a4d5c1e9a_add_subject_progress.py  a1b2c3d4e5f6_add_practice_table.py  a41df36fca7a_add_multiple_teachers_to_day_schedule_.py  c7b0dabdac4c_add_multiple_teachers_support.py  d6d0d7d068e5_add_generation_stats_and_job_tracking.py  ffd15a3d46ba_add_multiple_rooms_support.py
app/: __init__.py  main.py  models.py  schemas.py
app/api/routers/: admin.py  analytics.py  dictionary.py  export.py  practice.py  progress.py  schedule.py  upload.py
app/core/: config.py  database.py  logging_config.py  monitoring.py  security.py
app/models/: database.py  pydantic_models.py  schema.py
app/routes/: info.py  schedule.py
app/services/: __init__.py  analytics_service.py  crud.py  day_planning_service.py  dictionary_service.py  exporter.py  helpers.py  progress_service.py  replacement_service.py  schedule_service.py
app/utils/: schedule_utils.py
