[project]
name = "schedule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "psycopg==3.1.19",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-multipart>=0.0.20",
    "ruff>=0.12.12",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "psycopg2-binary>=2.9.10",
]
